# DBMS

./: CMakeLists.txt  main.cpp
CRUDManager/: CRUDManager.cpp  CRUDManager.h
Client/: Client.cpp  Client.h
DBDate/: DBDate.cpp  DBDate.h
DBTable/: DBTableTxt.cpp  DBTableTxt.h
DatabaseManager/: DatabaseManager.cpp  DatabaseManager.h
Databases/: metafile.txt
Databases/testDB/: Abonements.csv  Books.csv  Students.csv  metafile.txt
Table/: Table.cpp  Table.h
TableManager/: TablesManager.cpp  TablesManager.h
UserLog/: UserLog.cpp  UserLog.h
